<resources>
    <string name="app_name">보이지 않는 손님</string>
    <string name="reviewDonationDescription">지구를 지키고,\n나눔을 실천하는 법</string>
    <string name="reviewMakeDonation">기부하기</string>
    <string name="reviewGetDonation">후기 남기기</string>
    <string name="reviewEmpty">맛있는 반짝할인 상품을 구매해서 환경과 통장도 지키고, 이웃에게 따뜻한 마음을 전해봤어요!</string>
    <string name="reviewRegistration">등록</string>
    <string name="reviewStore">가게</string>
    <string name="reviewDonationBoxDescription">작은 도움을 기다리는\n상품이 있어요</string>
    <string name="reviewReviewBoxDescription">반짝할인 상품을 포장해 본\n후기를 남겨보세요</string>
    <string name="reviewReviewListTitle">반짝후기</string>
    <string name="writeReviewRegister">후기 등록하기</string>
    <string name="exchangeTabShowExchange">교환증 보기</string>
    <string name="exchangeTabWriteReview">후기 작성하기</string>
    <string name="exchangeTabShowReview">후기 보기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discountStoreTop">반짝할인 가게</string>
    <string name="discountProduct">반짝할인 상품</string>
    <string name="discountProductMoreSee">반짝할인 상품 더 보기</string>
    <string name="discountWaitingProduct">기부를 기다리는 상품</string>
    <string name="itemProductPercent">%</string>
    <string name="itemProductWaiting">명 대기 중</string>
    <string name="discountAllSeeActivity">상품 전체보기</string>
    <string name="itemDiscountProductAuthAfterUse">인증 후 이용가능</string>
    <string name="discountDonationWaitingMoreSee">기부 대기 상품 더 보기</string>
    <string name="StoreDetailInformation">가게 정보</string>
    <string name="storeDetailName">멕시칸인더보울 명동점</string>
    <string name="shopDetailTele">전화번호</string>
    <string name="storeDetailBreakTime">브레이크 타임</string>
    <string name="storeDetailTime">영업시간</string>
    <string name="storeDetailRoad">도로명 주소</string>
    <string name="storeDetailCopy">복사</string>
    <string name="productMoreSee">상품 더보기</string>
    <string name="discountItemWon">원</string>
    <string name="itemDiscountBuy">구입하기</string>
    <string name="itemDiscountGive">기부하기</string>
    <string name="itemDiscountWait">기부 대기하기</string>
    <string name="exchangeDetailTop">교환증 상세</string>
    <string name="exchangeDetailAddress">지번 주소</string>
    <string name="exchangeDetailOrderInfo">주문 정보</string>
    <string name="exchangeDetailDiscountPrice">할인 금액</string>
    <string name="exchangeTotalPrice">총 결제 금액</string>
    <string name="excahngeMinus">-</string>
    <string name="exchangeDetailToHave">음식을 받고 나서 꼭 사장님이 교환 완료 버튼을 누르게 해주세요!</string>
    <string name="discountMoreSee">상품 더보기</string>
    <string name="discountChallenge">용기내챌린지 환영</string>
    <string name="storeDetailChallenge">용기내챌린지 환영</string>
    <string name="buyVisitedTime">도착 예정 시간</string>
    <string name="buyFinish">결제가 완료되었습니다</string>
    <string name="buyLookReceipt">교환증 보기</string>
    <string name="buyText">결제하기</string>
    <string name="buyingText">결제하는 중입니다 …</string>
    <string name="exchangeTabReceipt">교환증</string>
    <string-array name="reviewBannerList">
        <item>지구를 지키고,\n나눔을 실천하는 쉬운 방법</item>
        <item>기부 후기를 널리 알리는 게\n유행하는 이유</item>
        <item>일회용 포장 용기 종류별\n재활용 방법</item>
    </string-array>
    <string name="readReview">후기 보기</string>
    <string name="readEditReview">후기 수정하기</string>
    <string name="writeReview">후기 작성하기</string>
    <string name="writePostReview">후기 등록하기</string>
</resources>
