<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="discountProductItem"
            type="com.kbsc.data.dto.ProductDto" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_product_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:background="@drawable/shape_gray_fill_5_rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_rank"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintStart_toEndOf="@+id/iv_product"
            app:layout_constraintTop_toTopOf="@id/iv_product" />

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:includeFontPadding="false"
            android:textColor="@color/gray"
            android:textAppearance="@style/ShopM9"
            app:layout_constraintBottom_toBottomOf="@id/iv_rank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_rank"
            app:layout_constraintTop_toTopOf="@id/iv_rank"
            tools:text="캘리인더보울 판교점" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textAppearance="@style/ShopSb152"
            app:layout_constraintStart_toStartOf="@+id/iv_rank"
            app:layout_constraintTop_toBottomOf="@+id/iv_rank"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="멕시칸 치킨 부리또" />

        <TextView
            android:id="@+id/tv_tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/shape_white_line_2_rectangle"
            android:elevation="3dp"
            android:includeFontPadding="false"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:textAppearance="@style/ShopR82"
            android:textColor="@color/dark_green"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="오후 3시 마감" />

        <TextView
            android:id="@+id/tv_tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_dark_green_fill_2_rectangle"
            android:includeFontPadding="false"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:textAppearance="@style/ShopR82"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_tag1"
            app:layout_constraintTop_toTopOf="@id/tv_tag1"
            tools:text="1개 남음" />


        <TextView
            android:id="@+id/tv_discount_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/orange"
            android:textAppearance="@style/ShopM13"
            app:layout_constraintStart_toStartOf="@id/tv_original_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_price"
            app:layout_constraintBottom_toBottomOf="@+id/iv_product"
            tools:text="50" />

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/itemProductPercent"
            android:textColor="@color/orange"
            android:textAppearance="@style/ShopM13"
            app:layout_constraintBottom_toBottomOf="@+id/tv_discount_amount"
            app:layout_constraintStart_toEndOf="@+id/tv_discount_amount"
            app:layout_constraintTop_toTopOf="@+id/tv_discount_amount" />

        <TextView
            android:id="@+id/tv_discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:textAppearance="@style/ShopM13"
            app:layout_constraintBottom_toBottomOf="@+id/tv_discount_amount"
            app:layout_constraintStart_toEndOf="@+id/tv_percent"
            app:layout_constraintTop_toTopOf="@+id/tv_discount_amount"
            tools:text="4,500" />

        <TextView
            android:id="@+id/tv_won"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAppearance="@style/ShopM13"
            app:layout_constraintBottom_toBottomOf="@id/tv_discount_price"
            app:layout_constraintStart_toEndOf="@+id/tv_discount_price"
            app:layout_constraintTop_toTopOf="@+id/tv_discount_price"
            android:text="@string/discountItemWon" />

        <TextView
            android:id="@+id/tv_original_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_gray"
            android:textAppearance="@style/ShopM11Decoline"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_product"
            android:layout_marginTop="20dp"
            tools:text="9,000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_won"
            app:layout_constraintTop_toTopOf="@+id/tv_won"
            app:layout_constraintEnd_toStartOf="@+id/tv_complete_donation"
            android:textColor="@color/dark_green"
            android:textAppearance="@style/ShopM9"
            tools:text="1"/>

        <TextView
            android:id="@+id/tv_complete_donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_green"
            android:textAppearance="@style/ShopM9"
            app:layout_constraintBottom_toBottomOf="@+id/tv_won"
            app:layout_constraintTop_toTopOf="@+id/tv_won"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="개 기부 완료" />

        <TextView
            android:id="@+id/btn_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_red_yellow_3_rectangle"
            android:paddingVertical="12dp"
            android:text="@string/itemDiscountBuy"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAppearance="@style/ProductSb122"
            app:layout_constraintEnd_toStartOf="@+id/btn_donation"
            app:layout_constraintStart_toStartOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@+id/iv_product" />

        <TextView
            android:id="@+id/btn_donation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_white_line_3_rectangle"
            android:paddingVertical="12dp"
            android:text="@string/itemDiscountGive"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAppearance="@style/ProductSb122"
            app:layout_constraintEnd_toStartOf="@+id/btn_donation_waiting"
            app:layout_constraintStart_toEndOf="@+id/btn_buy"
            app:layout_constraintTop_toTopOf="@+id/btn_buy" />

        <TextView
            android:id="@+id/btn_donation_waiting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_white_line_3_rectangle"
            android:paddingVertical="12dp"
            android:text="@string/itemDiscountWait"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAppearance="@style/ProductSb122"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_donation"
            app:layout_constraintTop_toTopOf="@+id/btn_buy" />

        <ImageView
            android:id="@+id/iv_waiting_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_white_line_10_rectangle"
            app:layout_constraintEnd_toEndOf="@+id/btn_donation"
            app:layout_constraintTop_toTopOf="@+id/btn_donation" />

        <TextView
            android:id="@+id/tv_waiting_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/orange"
            android:textAppearance="@style/ProductSbM83"
            app:layout_constraintBottom_toBottomOf="@+id/iv_waiting_people"
            app:layout_constraintEnd_toStartOf="@+id/tv_waiting"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/iv_waiting_people"
            app:layout_constraintTop_toTopOf="@+id/iv_waiting_people"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/itemProductWaiting"
            android:textColor="@color/orange"
            android:textAppearance="@style/ProductSbM83"
            app:layout_constraintBottom_toBottomOf="@+id/iv_waiting_people"
            app:layout_constraintEnd_toEndOf="@+id/iv_waiting_people"
            app:layout_constraintStart_toEndOf="@+id/tv_waiting_num"
            app:layout_constraintTop_toTopOf="@+id/iv_waiting_people" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>