<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.kbcs.soptionssix.buy.BuyViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".buy.DonateBuyFoodActivity">

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/donate_buy_top_screen_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_shop_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/donate_buy_top_screen_cv">

                <TextView
                    android:id="@+id/tv_title_store"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:includeFontPadding="false"
                    android:text="@string/StoreDetailInformation"
                    android:textAppearance="@style/ShopB15"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/vLine1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/view_background"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_store" />

                <ImageView
                    android:id="@+id/iv_shop_emo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/ic_shop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vLine1" />

                <TextView
                    android:id="@+id/tv_store_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:includeFontPadding="false"
                    android:text = "@{vm.uiState.storeName}"
                    android:textAppearance="@style/ShopM13"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/iv_shop_emo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_shop_emo"
                    app:layout_constraintTop_toTopOf="@id/iv_shop_emo"
                    tools:text="@string/storeDetailName" />

                <View
                    android:id="@+id/vLine2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/view_background"
                    app:layout_constraintTop_toBottomOf="@+id/iv_shop_emo" />

                <TextView
                    android:id="@+id/tv_road"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/storeDetailRoad"
                    android:textAppearance="@style/ShopSb10"
                    android:textColor="@color/dark_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vLine2" />

                <TextView
                    android:id="@+id/tv_road_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@{vm.uiState.loadAddress}"
                    android:textAppearance="@style/ShopInfoM11"
                    android:textColor="@color/dark_gray_2"
                    app:layout_constraintStart_toEndOf="@+id/tv_road"
                    app:layout_constraintTop_toTopOf="@+id/tv_road"
                    tools:text="서울특별시 중구 남대문로 84" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/exchangeDetailAddress"
                    android:textAppearance="@style/ShopSb10"
                    android:textColor="@color/dark_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_road" />

                <TextView
                    android:id="@+id/tv_address_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@{vm.uiState.address}"
                    android:textAppearance="@style/ShopInfoM11"
                    android:textColor="@color/dark_gray_2"
                    app:layout_constraintStart_toEndOf="@+id/tv_address"
                    app:layout_constraintTop_toTopOf="@+id/tv_address"
                    tools:text="명동 445" />

                <ImageView
                    android:id="@+id/iv_copy_road"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/file"
                    app:layout_constraintBottom_toBottomOf="@id/tv_road_detail"
                    app:layout_constraintStart_toEndOf="@+id/tv_road_detail"
                    app:layout_constraintTop_toTopOf="@+id/tv_road_detail" />

                <TextView
                    android:id="@+id/tv_copy_road"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/storeDetailCopy"
                    android:textAppearance="@style/ShopInfoM11"
                    app:layout_constraintBottom_toBottomOf="@id/iv_copy_road"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_copy_road"
                    app:layout_constraintTop_toTopOf="@id/iv_copy_road" />

                <ImageView
                    android:id="@+id/iv_copy_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/file"
                    app:layout_constraintBottom_toBottomOf="@id/tv_address_detail"
                    app:layout_constraintStart_toEndOf="@+id/tv_address_detail"
                    app:layout_constraintTop_toTopOf="@+id/tv_address_detail" />

                <TextView
                    android:id="@+id/tv_copy_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/storeDetailCopy"
                    android:textAppearance="@style/ShopInfoM11"
                    app:layout_constraintBottom_toBottomOf="@id/iv_copy_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_copy_address"
                    app:layout_constraintTop_toTopOf="@id/iv_copy_address" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fcv_buy_naver_map"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    android:layout_marginHorizontal="31dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address" />

                <ImageView
                    android:id="@+id/iv_time_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape_light_brown_fill_4_rectangle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fcv_buy_naver_map" />

                <ImageView
                    android:id="@+id/iv_time_emo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/ic_soup"
                    app:layout_constraintBottom_toBottomOf="@id/iv_time_box"
                    app:layout_constraintStart_toStartOf="@id/iv_time_box"
                    app:layout_constraintTop_toTopOf="@id/iv_time_box" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="결제 후 매점에 방문해서 음식을 찾아갈게요!"
                    android:textAppearance="@style/BuyR13"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_time_emo"
                    app:layout_constraintEnd_toEndOf="@+id/iv_time_box"
                    app:layout_constraintStart_toEndOf="@+id/iv_time_emo"
                    app:layout_constraintTop_toTopOf="@id/iv_time_emo" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/donate_buy_bottom_screen_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_shop_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>